--- a/src/fuscart/components/landingPage/TopChoices/TopChoices.css
+++ b/src/fuscart/components/landingPage/TopChoices/TopChoices.css
@@ -34,7 +34,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  height: 100%;
+  height: 21rem;
   width: 100%;
 }
 
@@ -168,4 +168,45 @@
   height: 100%;
   font-family: var(--poppins-font);
   font-weight: var(--font-semibold);
+}
+
+@media screen and (max-width:480px) {
+  .topChoices-title-head {
+    font-size: var(--font-14);
+  }
+  .topChoices-title-sub{
+    font-size: var(--font-10);
+  }
+  .topChoices-main {
+    display: flex;
+    flex-direction: column;
+  }
+  .topChoices-ad {
+    height: 12rem;
+    width: 100%;
+  }
+  .topChoices-icon-section {
+    height: 2rem;
+    width: 2.5rem;
+    padding: 6px;
+  }
+  .sub-top-title {
+    font-size: var(--font-14);
+  }
+  .sub-top-offer {
+    font-size: var(--font-10);
+  }
+  .topChoices-product-image {
+    height: 3rem;
+  }
+  .topChoices-product-price {
+    font-size: var(--font-12);
+    display: flex;
+    justify-content: top;
+  }
+  
+  .price-symbol {
+    font-size: var(--font-8);
+    margin-top: 2px;
+  }
 }
