--- a/src/fuscart/index.css
+++ b/src/fuscart/index.css
@@ -4,18 +4,20 @@
 :root {
     --primary-color: #C96868;
     --secondary-color: #7EACB5;
-    --tertiary-color:#FFF4EA;
-    --support-color:#FADFA1;
+    --tertiary-color: #FFF4EA;
+    --support-color: #FADFA1;
     --black-primary: #343131;
     --black-Secondary: #4D4D4D;
     --white: #ffffff;
     --base: #D9D9D9;
     --disable: #F2F2F2;
-    --primaryLight-color:#EFD2D2;
+    --primaryLight-color: #EFD2D2;
     --Linear-primary: linear-gradient(to right, #FADFA1, #C96868);
 
 
     /* Font Sizes */
+    --font-8: 0.5rem;
+    --font-10: 0.625rem;
     --font-12: 0.75rem;
     --font-14: 0.875rem;
     --font-16: 1rem;
@@ -43,13 +45,43 @@
     --font-semibold: 600;
     --font-bold: 700;
 }
-*{
+
+* {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
-.main{
+
+.main {
     margin: 0 3%;
     display: grid;
     gap: 1rem;
+}
+
+
+::-webkit-scrollbar {
+    background-color: #f0f0f0;
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #f0f0f0;
+}
+
+.my-scroll-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.my-scroll-container::-webkit-scrollbar-thumb {
+    background-color: #0078d7;
+    border-radius: 5px;
 }
