--- a/src/Fuescart/Index.css
+++ b/src/Fuescart/Index.css
@@ -21,6 +21,7 @@
     --font-12: 0.75rem;
     --font-14: 0.875rem;
     --font-16: 1rem;
+    --font-17: 1.023rem;
     --font-18: 1.125rem;
     --font-20: 1.25rem;
     --font-22: 1.375rem;
@@ -55,7 +56,7 @@
 .main {
     margin: 0 3%;
     display: grid;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 
