--- a/src/Fuescart/Components/ProductCard/ProductCard.css
+++ b/src/Fuescart/Components/ProductCard/ProductCard.css
@@ -30,6 +30,11 @@
     padding: 0.3% 2%;
     box-shadow: 0px 0px 2px #bdb6b6;
     border-radius: 6px;
+    text-decoration: none;
+  }
+  .product-card-viewall:hover {
+    background-color: var(--secondary-color);
+    color: var(--white);
   }
   
   .product-card-main {
