--- a/src/Fuescart/Components/Static/Footer/Footer.css
+++ b/src/Fuescart/Components/Static/Footer/Footer.css
@@ -1,14 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Righteous&display=swap');
+
+
+:root {
+    --primary-color: #C96868;
+    --secondary-color: #7EACB5;
+    --tertiary-color: #FFF4EA;
+    --support-color: #FADFA1;
+    --black-primary: #343131;
+    --black-Secondary: #4D4D4D;
+    --white: #ffffff;
+    --base: #D9D9D9;
+    --disable: #F2F2F2;
+    --primaryLight-color: #EFD2D2;
+    --Linear-primary: linear-gradient(to right, #FADFA1, #C96868);
+
+
+    /* Font Sizes */
+    --font-8: 0.5rem;
+    --font-10: 0.625rem;
+    --font-12: 0.75rem;
+    --font-14: 0.875rem;
+    --font-16: 1rem;
+    --font-17: 1.023rem;
+    --font-18: 1.125rem;
+    --font-20: 1.25rem;
+    --font-22: 1.375rem;
+    --font-24: 1.5rem;
+    --font-26: 1.625rem;
+    --font-28: 1.75rem;
+    --font-30: 1.875rem;
+    --font-32: 2rem;
+
+    /* Fonts */
+    --righteous-font: "Righteous", serif;
+    --poppins-font: "Poppins", sans-serif;
+    --quicksand-font: "Quicksand", serif;
+    --inter-font: "Inter", sans-serif;
+
+    /* Font Weights */
+    --font-thin: 100;
+    --font-extralight: 200;
+    --font-light: 300;
+    --font-regular: 400;
+    --font-medium: 500;
+    --font-semibold: 600;
+    --font-bold: 700;
+}
+
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
 .footer {
-    position: relative; 
-    left: -3%; 
-    right: -3%;
-    width: calc(100% + 6%);
     background-color: var(--secondary-color);
     font-family: var(--righteous-font);
     display: grid;
     gap: 2rem;
     padding: 2rem 3.7% 1% 3.7%;
-    margin: 0; /* Removes the footer's own margin */
+    margin: 1.5rem 0 0 0;
+    
 }
 .footer-main{
     width: 100%;
@@ -89,7 +141,6 @@
 .footer-nav-link:hover{
     color: var(--black-Secondary);
     text-decoration: none;
-    font-size: var(--font-14);
 }
 .pegasus-copyright{
     width: 100%;
