--- a/src/Fuescart/Main/TopChoices/TopChoices.css
+++ b/src/Fuescart/Main/TopChoices/TopChoices.css
@@ -146,6 +146,12 @@
     height: 4rem;
     border-radius: 10px;
   }
+  .topChoices-product-image:hover {
+    width: 100%;
+    height: 4rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px #663232;
+  }
   
   .topChoices-product-price {
     width: 100%;
