--- a/src/Fuescart/Main/TopChoices/TopChoices.css
+++ b/src/Fuescart/Main/TopChoices/TopChoices.css
@@ -85,7 +85,33 @@
     flex-direction: column;
     gap: 4%;
   }
-  
+  .topChoice-section-text {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    flex-direction: column;
+    gap: 4%;
+  }
+  .topChoice-nav-text{
+    font-size: var(--font-28);
+    font-family: var(--righteous-font);
+    text-transform: uppercase;
+    color: var(--primary-color);
+  }
+  .showMore-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4%;
+    text-transform: uppercase;
+    font-family: var(--righteous-font);
+    font-size: var(--font-20);
+    background-color: var(--tertiary-color);
+    box-shadow: 0px 0px 2px #bdb6b6;
+    padding: 3% 0%;
+    border-radius: 6px;
+    color: var(--primary-color);
+  }
   .topChoices-section-top {
     display: flex;
     justify-content: start;
